<resources>
    <string name="app_name">MarkedCity</string>
    <string name="titulo">Título</string>
    <string name="voltar">Voltar</string>
    <string name="guardar">Guardar</string>
    <string name="adicionar">Adicionar</string>
    <string name="notas">Notas</string>
    <string name="login">Iniciar Sessão</string>
    <string name="password">Palavra-Passe</string>
    <string name="nome">Nome</string>
    <string name="menu">Menu</string>
    <string name="consultar_mapa">Consultar Mapa</string>
    <string name="consultar_lista">Consultar Lista</string>
    <string name="terminar_sessao">Terminar Sessão</string>
    <string name="reportar_situacao">Reportar Situação</string>
    <string name="lembrar_me">Lembrar-me</string>
    <string name="title_activity_mapa">Map</string>
    <string name="mapa">Mapa</string>
    <string name="descricao">Descrição</string>
    <string name="imagem">Imagem</string>
    <string name="reportar">Reportar</string>
    <string name="campos_vazios">Campos obrigatórios vazios</string>
    <string name="permissao_invalida">Não foi possível editar</string>
    <string name="conteudo">Conteúdo</string>
</resources>