<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:id="@+id/barra_notas">
    <View
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:background="@color/gray"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="8dp"
        android:textSize="34dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/menu" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/bt_mapa"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:layout_width="300dp"
            android:layout_height="56dp"
            android:backgroundTint="@color/blue"
            android:textColor="@color/white"
            android:text="@string/consultar_mapa"/>

        <Button
            android:id="@+id/bt_lista"
            android:layout_below="@+id/bt_mapa"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_width="300dp"
            android:layout_height="56dp"
            android:backgroundTint="@color/blue"
            android:textColor="@color/white"
            android:text="@string/consultar_lista"/>

        <Button
            android:id="@+id/bt_reportar"
            android:layout_below="@+id/bt_lista"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_width="300dp"
            android:layout_height="56dp"
            android:backgroundTint="@color/blue"
            android:textColor="@color/white"
            android:text="@string/reportar_situacao"/>

        <Button
            android:id="@+id/logout"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bt_reportar"
            android:layout_marginTop="60dp"
            android:layout_centerHorizontal="true"
            android:text="@string/terminar_sessao"
            android:textColor="@color/blue" />

    </RelativeLayout>


</LinearLayout>