<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditarReporte"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:id="@+id/barra_notas">
        <View
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@color/gray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="8dp"
            android:textSize="34dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/reportar" />

        <Button
            android:id="@+id/bt_menu"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:drawableLeft="@drawable/voltar"
            android:text="@string/menu"
            android:textColor="@color/blue" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="14dp"
            android:layout_marginRight="14dp"
            android:layout_marginBottom="22dp"
            android:background="@drawable/eliminar"
            android:id="@+id/bt_eliminar"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <ImageView
            android:layout_marginTop="10dp"
            android:id="@+id/imagemSelecionada"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"/>


        <EditText
            android:id="@+id/imagem"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/imagemSelecionada"
            android:layout_centerHorizontal="true"
            android:drawableRight="@drawable/camera"
            android:onClick="imagem"
            android:hint="@string/imagem"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:textSize="15dp"/>

        <EditText
            android:id="@+id/descricao"
            android:layout_below="@id/imagem"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:hint="@string/descricao"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:textSize="15dp"/>

        <Button
            android:id="@+id/bt_guardar"
            android:layout_below="@+id/descricao"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_width="300dp"
            android:layout_height="56dp"
            android:backgroundTint="@color/blue"
            android:textColor="@color/white"
            android:text="@string/guardar"/>
    </RelativeLayout>

</LinearLayout>