<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VisualizarNota"

    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:id="@+id/barra_notas">

        <View
            android:layout_width="match_parent"
            android:layout_height="155dp"
            android:background="@color/gray"/>

        <Button
            android:id="@+id/bt_voltar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="8dp"
            style="?android:attr/borderlessButtonStyle"
            android:drawableLeft="@drawable/voltar"
            android:text="@string/voltar"
            android:textColor="@color/blue"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="14dp"
            android:layout_marginRight="14dp"
            android:layout_marginBottom="22dp"
            android:background="@drawable/eliminar"
            android:id="@+id/bt_eliminar"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <EditText
            android:id="@+id/editText_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textSize="17dp"
            android:textStyle="bold"
            android:hint="@string/titulo"/>
        <EditText
            android:layout_below="@+id/editText_titulo"
            android:id="@+id/editText_conteudo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="@color/black"
            android:hint="@string/conteudo"/>

        <Button
            android:id="@+id/bt_guardar"
            android:layout_below="@+id/editText_conteudo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_width="250dp"
            android:layout_height="56dp"
            android:backgroundTint="@color/blue"
            android:textColor="@color/white"
            android:text="@string/guardar"/>
    </RelativeLayout>


</LinearLayout>